--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ h1 {
 
 .horizontal-menu li {
 
+    user-select: none;
     margin-right: 0px;
     padding: 10px 20px;
     background-color: #f0f0f0;
@@ -24,8 +25,6 @@ h1 {
     color: rgb(0, 0, 0);
     cursor: pointer;
 }
-
-
 
 .grid-container {
     position: absolute;
