--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 h1 {
     color: black;
     font-family: 'Roboto', sans-serif;
-    font-size: 35px;
     font-weight: 100;
 }
 
@@ -31,6 +30,8 @@ h1 {
     display: grid;
     grid-template-columns: 100px 27px;
     gap: 0px;
+    top: 45%;
+    left: 45%;
 }
 
 .grid-item {
@@ -50,4 +51,14 @@ h1 {
 
 .bottom {
     border-bottom: 1px solid black;
+}
+
+
+.green_ {
+    background-color: rgb(207, 255, 207);
+}
+
+.green_:hover {
+    background-color: rgb(125, 255, 125);
+
 }
